# limyeDB

./: .dockerignore  .gitignore  .golangci.yaml  .goreleaser.yaml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.goreleaser  Makefile  README.md  SECURITY.md  codecov.yml  config.example.yaml  config.yaml  docker-compose.cluster.yml  docker-compose.yml  go.mod  go.sum
.github/: CODEOWNERS  FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: benchmark.yml  ci.yml  codeql.yml  docker.yml.disabled  nightly.yml  release.yml
admin/: index.html
api/: openapi.yaml
api/grpc/: refactor_service.py  server.go  service.go
api/rest/: handlers.go  handlers_test.go  middleware.go  openapi.yaml  server.go
clients/csharp/: LimyeDB.csproj  LimyeDBClient.cs
clients/go/: go.mod
clients/java/: pom.xml
clients/javascript/: README.md  package.json
clients/python/: setup.py  test_debug.py
clients/rust/: Cargo.toml  README.md
clients/rust/src/: lib.rs
cmd/limyedb/: main.go
cmd/limyedb-cli/: main.go
deploy/nginx/: nginx.conf
deploy/prometheus/: prometheus-cluster.yml  prometheus.yml
docs/: advanced_filtering.md  client_sdk_reference.md  clustering.md  grpc_api.md  how_tos.md  installation.md  performance_tuning.md  quantization.md  tricks_and_best_practices.md  troubleshooting.md
docs/tutorials/: getting_started.md  hybrid_search_deep_dive.md  rag_application.md  scaling_to_millions.md
internal/pool/: pool.go
test/: leak_test.go  surpass_qdrant_test.go
(+188 files in other folders)
